--- a/USTHWeather/app/src/main/AndroidManifest.xml
+++ b/USTHWeather/app/src/main/AndroidManifest.xml
@@ -8,6 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.USTHWeather"></application>
+        android:theme="@style/Theme.USTHWeather">
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="true"
+            android:label="@string/title_activity_settings" />
+    </application>
 
 </manifest>
